--- a/core/app/views/gaku/class_groups/_form.html.slim
+++ b/core/app/views/gaku/class_groups/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @class_group, :remote => true do |class_group_form|
+= form_for @class_group, :remote => true, :validate => true do |class_group_form|
   - if @class_group.errors.any?
     .alert.alert-error
       strong
