--- a/core/app/views/gaku/syllabuses/show.html.slim
+++ b/core/app/views/gaku/syllabuses/show.html.slim
@@ -29,17 +29,14 @@
                   = print_count(@syllabus.exams.count, t_exam_list)
               .pull-right
                 = ajax_link_to_new t('exam.new'), '', :id => 'new-syllabus-exam-link'
-
                 = ajax_link_to_new t('exam.add_existing'), '', :id => 'new-existing-exam-link'
-
             .row-fluid
               .span12
                 #new-existing-exam-errors
                 #new-existing-exam style='display:none;padding-top:10px'
-                  =render 'gaku/syllabuses/exams/select_form'
-
+                  = render 'gaku/syllabuses/exams/select_form'
                 #new-syllabus-exam style='display:none;padding-top:10px'
-                  =render 'gaku/syllabuses/exams/form'
+                  = render 'gaku/syllabuses/exams/form'
             .row-fluid
               .span12
                 hr
@@ -62,3 +59,5 @@
         = link_to_edit_with_text [:edit, @syllabus], :class => "span9 btn btn-warning edit-link", :style => "min-height:0px", :remote => true
         = link_to_back syllabuses_path, :class => "span3 btn btn-danger", :style => "min-height:0px"
         .row-fluid
+
+= javascript_include_tag 'gaku/syllabuses'
