--- a/core/app/views/gaku/students/index.html.slim
+++ b/core/app/views/gaku/students/index.html.slim
@@ -7,7 +7,7 @@
   .pull-right
     = ajax_link_to_new t(:'student.new'), new_student_path, :id => "new-student-link"
     = button t(:'student.import'), "students/importer", :id => "import-students-link"
-    = button t(:'student.export'), "students.csv", :id => 'export-students-link'
+    = button t(:'student.export'), :action => :index, :format => :csv, :id => 'export-students-link'
 
 = content_for :new_form do
   #new-student.hide
