--- a/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
@@ -1,3 +1,3 @@
 = remote_form_for [:admin, @school, @campus, @address] do |f|
   = render 'gaku/shared/form_fields/address_form_fields', :f => f
-  = buttons_for @address, :nested_id => 'admin-school-campus-address'
+  = buttons_for @address, :nested_id => 'admin-school-campus-address', :label => t(:'address.save')
