--- a/admissions/app/views/gaku/admin/admission_periods/_admission_period.html.slim
+++ b/admissions/app/views/gaku/admin/admission_periods/_admission_period.html.slim
@@ -1,2 +1,2 @@
 tr id="admission-period-#{admission_period.id}"
-  = render 'admission_period_fields', :admission_period => admission_period
+  = render 'fields', :admission_period => admission_period
