--- a/admissions/app/views/gaku/admin/admission_periods/edit.js.erb
+++ b/admissions/app/views/gaku/admin/admission_periods/edit.js.erb
@@ -1,2 +1,3 @@
-$('#modal-dialogs').html('<%= render_js_partial("admission_period_modal", {:admission_period => @admission_period}) %>');
+$('#modal-dialogs').html('<%= render_js_partial("modal", {:admission_period => @admission_period}) %>');
 $('#edit-admission-period-modal').modal('show');
+$('.remote-form').enableValidations();
