--- a/admissions/app/views/gaku/admin/admission_periods/new.js.erb
+++ b/admissions/app/views/gaku/admin/admission_periods/new.js.erb
@@ -1,2 +1,3 @@
 $('#new-admin-admission-period').html('<%= render_js_partial("form") %>').slideDown()
 $('#new-admin-admission-period-link').hide();
+$('.remote-form').enableValidations();
