--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/_form_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/_form_fields.html.slim
@@ -29,8 +29,8 @@ css:
     display:inline;
   }
   
-  .fields label, .fields input {
-    display:inline;
+  .checkbox input {
+    float:none;
   }
   .fields label {
     margin-right:10px;
