--- a/admissions/app/views/gaku/admin/admission_periods/_form_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admission_periods/_form_fields.html.slim
@@ -16,7 +16,7 @@ br/
   = f.fields_for :period_method_associations do |method_form|
     .method_form
       = method_form.label :name, t("admission_methods.name")
-      = method_form.select :admission_method_id, @admission_methods, { :prompt => 'Select Admission Method' }, :label => t(:'admission_methods.name')
+      = method_form.select :admission_method_id, options_from_collection_for_select(@admission_methods, :id, 'name'), { :prompt => 'Select Admission Method' }, :label => t(:'admission_methods.name')
       = method_form.link_to_remove t(:'admission_methods.remove'), :class => 'btn btn-danger'
   br/
   p= f.link_to_add t('admission_methods.add'), :period_method_associations, :class => 'btn'
